added markdown callouts

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
         <button id="download-btn" style="margin-top: 20px">
           Download as PDF
         </button>
+
+        <div class="markdown-callout">
+          <h3>Markdown Tips</h3>
+          <ul>
+            <li><code>**bold**</code> → <strong>bold</strong></li>
+            <li>
+              <code>*italic*</code> or <code>_italic_</code> → <em>italic</em>
+            </li>
+            <li><code>__underline__</code> → <u>underline</u></li>
+            <li><code>~~strike~~</code> → <s>strike</s></li>
+            <li><code>[text](url)</code> → <a href="#">link</a></li>
+          </ul>
+        </div>
       </aside>
 
       <main class="preview">
