--- a/index.html
+++ b/index.html
@@ -1,59 +1,120 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic Resume Builder</title>
+    <title>Resume Builder</title>
+
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
+
   <body>
+    <!-- Toast notifications container -->
     <div id="toast-container" class="toast-container"></div>
 
     <div class="container">
+      <!-- SIDEBAR -->
       <aside class="sidebar">
-        <h2>Resume Builder</h2>
-        <button class="btn" id="update-name">Update Name</button>
-        <button class="btn" id="update-contact">Add Contact Info</button>
-        <button class="btn" id="add-section-heading">
-          Add Section Heading
-        </button>
-        <button class="btn" id="add-title-line">Add Title Line</button>
-        <button class="btn" id="add-bullet-point">Add Bullet Point</button>
-        <button class="btn" id="undo-btn">Undo Last Action</button>
-        <button class="btn btn-download" id="download-btn">
-          Print to PDF
-        </button>
+        <div class="sidebar-header">
+          <i
+            class="ph ph-file-text"
+            style="font-size: 24px; color: #4f46e5"
+          ></i>
+          <h2>Resumify</h2>
+        </div>
+
+        <div class="control-group">
+          <label class="group-label">Structure</label>
+          <button class="btn" id="btn-edit-header">
+            <i class="ph ph-identification-card"></i> Edit Header
+          </button>
+          <button class="btn" id="btn-add-section">
+            <i class="ph ph-plus-circle"></i> Add Section
+          </button>
+        </div>
+
+        <div class="control-group spacer">
+          <label class="group-label">Actions</label>
+          <button class="btn btn-secondary" id="save-btn">
+            <i class="ph ph-floppy-disk"></i> Save Progress
+          </button>
+          <button class="btn btn-danger-soft" id="clear-btn">
+            <i class="ph ph-trash"></i> Reset All
+          </button>
+        </div>
+
+        <div class="control-group mt-auto">
+          <button class="btn btn-primary" id="download-btn">
+            <i class="ph ph-download-simple"></i> Download PDF
+          </button>
+        </div>
 
         <div class="markdown-callout">
-          <h3>Markdown Tips</h3>
+          <h3><i class="ph ph-magic-wand"></i> Pro Tips</h3>
           <ul>
-            <li><code>**bold**</code> → <strong>bold</strong></li>
-            <li>
-              <code>*italic*</code> / <code>_italic_</code> → <em>italic</em>
-            </li>
-            <li><code>__underline__</code> → <u>underline</u></li>
-            <li><code>~~strike~~</code> → <s>strike</s></li>
-            <li><code>[text](url)</code> → <a href="#">link</a></li>
-          </ul>
-          
-          <h3>Clean PDF Tips</h3>
-          <ul>
-            <li>Turn OFF "Headers and footers" in print settings</li>
-            <li>Select "Save as PDF" as destination</li>
+            <li><code>**bold**</code> for strong text</li>
+            <li><code>[text](link)</code> for links</li>
           </ul>
         </div>
       </aside>
 
+      <!-- MAIN PREVIEW AREA -->
       <main class="preview">
-        <div id="resume-preview">
-          <header>
-            <h1 id="name">Your Name</h1>
-            <p id="contact">Location | Email | Phone | Website</p>
-          </header>
-          <div id="dynamic-sections"></div>
+        <div class="preview-wrapper">
+          <div id="resume-preview"></div>
         </div>
       </main>
     </div>
-    <button id="sidebar-toggle" class="sidebar-toggle">☰</button>
+
+    <!-- EDIT MODAL -->
+    <div id="universal-modal" class="modal-overlay">
+      <div class="modal">
+        <div class="modal-header">
+          <h3 id="modal-title">Edit Item</h3>
+          <button class="close-modal" id="modal-close-x">
+            <i class="ph ph-x"></i>
+          </button>
+        </div>
+
+        <div id="modal-fields" class="modal-body"></div>
+
+        <div class="modal-footer">
+          <button class="btn btn-text" id="modal-cancel">Cancel</button>
+          <button class="btn btn-primary" id="modal-save">Save Changes</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- CONFIRMATION MODAL -->
+    <div id="confirm-modal" class="modal-overlay">
+      <div class="modal modal-sm">
+        <div class="modal-header">
+          <h3 class="text-danger">
+            <i class="ph ph-warning-circle"></i> Confirm Action
+          </h3>
+          <button class="close-modal" id="confirm-close-x">
+            <i class="ph ph-x"></i>
+          </button>
+        </div>
+
+        <div class="modal-body">
+          <p id="confirm-message" style="color: #4b5563; line-height: 1.5">
+            Are you sure you want to delete this?
+          </p>
+        </div>
+
+        <div class="modal-footer">
+          <button class="btn btn-text" id="confirm-cancel">Cancel</button>
+          <button class="btn btn-danger" id="confirm-yes">Yes, Delete</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile sidebar toggle -->
+    <button id="sidebar-toggle" class="sidebar-toggle">
+      <i class="ph ph-list"></i>
+    </button>
   </body>
 </html>
