fixed toasters and added more markdown tips

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <div class="markdown-callout">
           <h3><i class="ph ph-magic-wand"></i> Pro Tips</h3>
           <ul>
-            <li><code>**bold**</code> for strong text</li>
+            <li><code>**bold**</code> &nbsp; <b> for strong text</b></li>
+            <li><code>_italics_</code> &nbsp; <i>for italics text</i></li>
+            <li><code>~~strike~~</code> &nbsp; <s>for strikethrough</s></li>
             <li><code>[text](link)</code> for links</li>
           </ul>
         </div>
