final changes hopefully

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
             <li><code>**bold**</code> &nbsp; <b> for strong text</b></li>
             <li><code>_italics_</code> &nbsp; <i>for italics text</i></li>
             <li><code>~~strike~~</code> &nbsp; <s>for strikethrough</s></li>
-            <li><code>[text](link)</code> for links</li>
+            <li><code>[text](link)</code><a href>for links</a></li>
+            <br />
+            <li>Any other basic html/markdown tags work!</li>
           </ul>
         </div>
       </aside>
